--- a/BellSchedule/Base.lproj/Main.storyboard
+++ b/BellSchedule/Base.lproj/Main.storyboard
@@ -56,6 +56,10 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wec-H5-anb">
+                                <rect key="frame" x="20" y="20" width="64" height="53.5"/>
+                                <state key="normal" title="Button"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.13205614624147843" green="1" blue="0.69897747404111144" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
